--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿@using Syncfusion.EJ2.Navigations;
+@using Syncfusion.EJ2.Navigations;
 @using Syncfusion.EJ2
 @using Microsoft.AspNetCore.Http;
 @{
